homeworks/12-kubernetes-05-cni/manifests/network-policy/all-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-deny-hello-node
spec:
  podSelector:
    matchLabels:
      app: hello-node
  policyTypes:
    - Ingress
    - Egress
