homeworks/12-kubernetes-05-cni/manifests/network-policy/ingress-hello-node.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-node
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nginx
      ports:
        - protocol: TCP
          port: 8080
